wrap bugs fixed + logo

--- a/react-app/src/components/VideoPage/VideoPage.css
+++ b/react-app/src/components/VideoPage/VideoPage.css
@@ -92,8 +92,9 @@
 .video-description-container {
     background-color: #F2F2F2;
     border-radius: 16px;
-    padding: .8rem 0;
+    padding: .8rem .8rem;
     display: flex;
+    max-width: 50rem;
 }
 
 .video-description-container > p {
@@ -242,6 +243,7 @@ background-color: #3F78CC;
 .edit-comment-form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 7rem;
     gap: 60px;
 }
